--- a/src/resources/db.properties
+++ b/src/resources/db.properties
@@ -1,5 +1,5 @@
 url=jdbc:mysql://localhost:3306
 db_name=javaandsql
 username=root
-password=RTY1qaz
-pwd = QAZ1wer&
+password=QAZ1wer&
+pwd = RTY1qaz
