--- a/src/resources/db.properties
+++ b/src/resources/db.properties
@@ -1,5 +1,10 @@
-url=jdbc:mysql://localhost:3306
-db_name=javaandsql
-username=root
+-url=jdbc:mysql://localhost:3306
+-db_name=javaandsql
+-username=root
 password=QAZ1wer&
+-pwd = RTY1qaz
+
+url=jdbc:postgres://localhost:3306
+db_name=javapostgres
+username=root
 pwd = RTY1qaz
