--- a/src/resources/db.properties
+++ b/src/resources/db.properties
@@ -1,10 +1,10 @@
--url=jdbc:mysql://localhost:3306
--db_name=javaandsql
--username=root
-password=QAZ1wer&
--pwd = RTY1qaz
+surl=jdbc:mysql://localhost:3306
+sdb_name=javaandsql
+susername=root
+spassword=QAZ1wer&
+spwd = RTY1qaz
 
-url=jdbc:postgres://localhost:3306
-db_name=javapostgres
-username=root
+url=jdbc:postgresql://localhost:5432
+db_name=java_postgres
+username=postgres
 pwd = RTY1qaz
